# pyZacros

./: .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE_CHEMPARSE  NOTICE  README.md  README.rst  __init__.py  project_setup.rst  pyproject.toml  pyzacrosrc.sh  requirements.txt  setup.cfg  setup.py
core/: Cluster.py  ClusterExpansion.py  ElementaryReaction.py  Lattice.py  LatticeState.py  Mechanism.py  ParametersBase.py  RKFLoader.py  RKFPrefactors.py  Settings.py  Species.py  SpeciesList.py  ZacrosJob.py  ZacrosMultiJob.py  ZacrosParametersScanJob.py  ZacrosResults.py  ZacrosSteadyStateJob.py
docs/: Makefile  compile.zsh  conf.py  first_steps.rst  index.rst  make.bat  modules.rst  pyzacros.classes.rst  pyzacros.rst  pyzacros.utils.rst  quick_install.rst
models/: LangmuirHinshelwood.py  ReuterScheffler.py  ZiffGulariBarshad.py  __init__.py
pykmc/: __init__.py  pykmc.py
pyzacros/: __init__.py
tests/: 4H2O.xyz  O-Pt111.xyz  conftest.py  test_Cluster.py  test_ElementaryReaction.py  test_InitialState.py  test_Job.py  test_KMCJob.py  test_KMCJob2_run.py  test_KMCJob_run.py  test_KMCSettings.py  test_Lattice.py  test_LatticeInitialState.py  test_Mechanism.py  test_MechanismFromAMS.py  test_OutputFilesParser.py  test_Parameters.py  test_RKFLoader.py  test_Settings.py  test_Species.py  test_SpeciesList.py  test_ZacrosJob.py  test_ZacrosJob_expected_input.txt  test_ZacrosJob_expected_input_default.txt  test_ZacrosJob_expected_input_explicit.txt  test_ZacrosJob_expected_input_periodic_cell.txt  test_ZacrosJob_expected_output.txt  test_ZacrosJob_expected_output_default.txt  test_ZacrosJob_expected_output_explicit.txt  test_ZacrosJob_expected_output_periodic_cell.txt  test_ZacrosJob_restart.py  test_ZacrosJob_run.py  test_ZacrosMultiJob.py  test_ZacrosParametersScanJob.py  test_ZacrosParametersScanSteadyStateJob.py  test_ZacrosResults.py  test_ZacrosSteadyStateJob.py  test_classes.py  test_initial_state.py  (+8 more)
utils/: __init__.py  (+1 more)
(+984 files in other folders)
